--- a/exercise2.tex
+++ b/exercise2.tex
@@ -14,6 +14,10 @@
 \pagestyle{empty}
 \begin{document}
 \textbf{\LARGE{The \TeX book}\ \Large{No.01}}\hspace{\fill} 
-\section*{EXERCISE1.1}
-  A \TeX pert, \TeX nician
+\section*{EXERCISE2.1}
+  Alice said, ``I always use an en-dash insead of a hyphen when specifying page numbers like `480--491' in a bibliography.''
+\section*{EXERCISE2.2}
+  ----
+\section*{EXERCISE2.3}
+
 \end{document}
