--- a/exercise2.tex
+++ b/exercise2.tex
@@ -13,11 +13,11 @@
 \setlength{\parindent}{0pt}% インデントくたばれ！
 \pagestyle{empty}
 \begin{document}
-\textbf{\LARGE{The \TeX book}\ \Large{No.01}}\hspace{\fill} 
+\textbf{\LARGE{The \TeX book}\ \Large{No.02}}\hspace{\fill} 
 \section*{EXERCISE2.1}
   Alice said, ``I always use an en-dash insead of a hyphen when specifying page numbers like `480--491' in a bibliography.''
 \section*{EXERCISE2.2}
-  ----
+  ----  
 \section*{EXERCISE2.3}
-
+  Gau\ss \ \ Weirestra\ss
 \end{document}
