--- a/exercise2.tex
+++ b/exercise2.tex
@@ -19,5 +19,7 @@
 \section*{EXERCISE2.2}
   ----  
 \section*{EXERCISE2.3}
-  Gau\ss \ \ Weirestra\ss
+  officail
+\section*{EXERCISE2.4}
+
 \end{document}
